--- a/src/main/resources/templates/client/Home.html
+++ b/src/main/resources/templates/client/Home.html
@@ -1,25 +1,23 @@
-<!doctype html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml"
-      th:replace="~{/layout/client/IndexClient :: dynamic(~{:: main})}">
-<body>
-<main>
-    <div style="max-width: 1300px; margin: auto; padding-left: 25px; padding-right: 25px; height: 660px;">
-        <div style="display: flex; align-items: center; flex-wrap: wrap; justify-content: space-around;">
-            <div style="flex-basis: 50%; min-width: 300px;">
-                <h1 style="font-size: 50px; line-height: 60px; margin: 25px 0;">Giúp bạn tự tin với mọi người <br> Một
-                    phong cách mới!</h1>
-                <p>Đừng chạy theo xu hướng. Đừng khiến mình phụ thuộc vào thời trang. <br>
-                    Hãy để bản thân là người quyết định bạn sẽ mặc gì và sống như thế nào.
-                </p>
-                <a th:href="@{/mangostore/product}"
-                   style="display: inline-block; background: #ff523b; color: #fff; padding: 8px 30px; margin: 30px 0; border-radius: 30px; transition: background 0.5s; text-decoration: none">Khám
-                    phá ngay &#8594;</a>
-            </div>
-            <div style="flex-basis: 50%;min-width: 300px;">
-                <img th:src="@{|/images/layout/banner.png|}" alt="" style="height: 350px; margin-left: 115px;">
+<div xmlns:th="http://www.w3.org/1999/xhtml"
+     th:replace="~{/layout/client/IndexClient :: dynamic(~{:: main})}">
+    <main>
+        <div style="max-width: 1300px; margin: auto; padding-left: 25px; padding-right: 25px; height: 660px;">
+            <div style="display: flex; align-items: center; flex-wrap: wrap; justify-content: space-around;">
+                <div style="flex-basis: 50%; min-width: 300px;">
+                    <h1 style="font-size: 50px; line-height: 60px; margin: 25px 0;">Giúp bạn tự tin với mọi người <br>
+                        Một
+                        phong cách mới!</h1>
+                    <p>Đừng chạy theo xu hướng. Đừng khiến mình phụ thuộc vào thời trang. <br>
+                        Hãy để bản thân là người quyết định bạn sẽ mặc gì và sống như thế nào.
+                    </p>
+                    <a th:href="@{/mangostore/product}"
+                       style="display: inline-block; background: #ff523b; color: #fff; padding: 8px 30px; margin: 30px 0; border-radius: 30px; transition: background 0.5s; text-decoration: none">Khám
+                        phá ngay &#8594;</a>
+                </div>
+                <div style="flex-basis: 50%;min-width: 300px;">
+                    <img th:src="@{|/images/layout/banner.png|}" alt="" style="height: 350px; margin-left: 115px;">
+                </div>
             </div>
         </div>
-    </div>
-</main>
-</body>
-</html>
+    </main>
+</div>
