--- a/src/main/resources/templates/layout/admin/MenuAdmin.html
+++ b/src/main/resources/templates/layout/admin/MenuAdmin.html
@@ -56,12 +56,12 @@
                 </ul>
             </div>
         </li>
-        <li class="nav-item nav-category">Quản lý voucher</li>
+        <li class="nav-item nav-category">Quản lý phiếu giảm giá</li>
         <li class="nav-item">
             <a class="nav-link" data-bs-toggle="collapse" href="#form-voucher" aria-expanded="false"
                aria-controls="form-voucher">
                 <i class="menu-icon bi bi-wallet2"></i>
-                <span class="menu-title">Danh sách voucher</span>
+                <span class="menu-title">Danh sách phiếu giảm giá</span>
                 <i class="menu-arrow bi bi-arrow-right-short"></i>
             </a>
             <div class="collapse" id="form-voucher">
@@ -69,9 +69,10 @@
                     <li class="nav-item"><a class="nav-link"
                                             th:href="@{/mangostore/admin/rank}">Rank</a></li>
                     <li class="nav-item"><a class="nav-link"
-                                            th:href="@{/mangostore/admin/voucher}">Voucher</a></li>
+                                            th:href="@{/mangostore/admin/voucher}">Phiếu giảm giá</a></li>
                     <li class="nav-item"><a class="nav-link"
-                                            th:href="@{/mangostore/admin/voucher-client}">Voucher khách hàng</a></li>
+                                            th:href="@{/mangostore/admin/voucher-client}">Phiếu giảm giá khách hàng</a>
+                    </li>
                 </ul>
             </div>
         </li>
