--- a/src/main/resources/templates/layout/login/IndexLogin.html
+++ b/src/main/resources/templates/layout/login/IndexLogin.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" th:href="@{|/css/login/Style.css|}">
     <link rel="stylesheet" th:href="@{|/css/message/ImportAlert2.css|}">
     <link rel="shortcut icon" th:href="@{|/images/layout/favicon.png|}"/>
-    <title>Login</title>
+    <title th:text="${titleWebsite}"></title>
 </head>
 
 <body>
