--- a/src/main/resources/templates/admin/Order/IndexOrderShow.html
+++ b/src/main/resources/templates/admin/Order/IndexOrderShow.html
@@ -1,121 +1,118 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml"
-      th:replace="~{/layout/admin/IndexAdmin :: dynamic(~{:: main})}">
-<body>
-<main class="DetailInvoiceOnlinePage ConfirmInvoicePage CancelInvoiceForAdminPage">
-    <div>
-        <ul class="breadcrumb">
-            <li class="breadcrumb-item active" aria-current="page">Trang chủ hóa đơn chờ xác nhận</li>
-        </ul>
-    </div>
-    <div class="col-lg-12 grid-margin stretch-card">
-        <div class="card">
-            <div class="card-body">
-                <h4 class="card-title">Danh sach hóa đơn chờ xác nhận</h4>
-                <div class="table-responsive">
-                    <div class="header">
-                        <table class="table table-striped">
-                            <thead>
-                            <tr>
-                                <th style="width: 30px;">#</th>
-                                <th>Mã hóa đơn</th>
-                                <th>Tên hóa đơn</th>
-                                <th>Ngày tạo hóa đơn</th>
-                                <th>Ngày thanh toán hóa đơn</th>
-                                <th>Tổng giá trị trên hóa đơn</th>
-                                <th>Tổng tiền thanh toán</th>
-                                <th>Hành động</th>
-                            </tr>
-                            </thead>
-                        </table>
-                    </div>
-                    <div class="content" style="height: 476px;">
-                        <table class="table table-hover">
-                            <tbody>
-                            <tr th:each="listInvoiceOnline, stat : ${listInvoiceOnline}">
-                                <td style="width: 30px;" th:text="${stat.count}"></td>
-                                <td th:text="${listInvoiceOnline.codeInvoice}"></td>
-                                <td th:text="${listInvoiceOnline.nameInvoice}"></td>
-                                <td th:text="${#temporals.format(listInvoiceOnline.invoiceCreationDate, 'HH:mm:ss : dd/MM/yyyy')}"></td>
-                                <td th:text="${#temporals.format(listInvoiceOnline.invoicePaymentDate, 'HH:mm:ss : dd/MM/yyyy')}"></td>
-                                <td th:text="${#numbers.formatDecimal(listInvoiceOnline.totalInvoiceAmount, 0, 'COMMA', 0, 'POINT') + ' VND'}"></td>
-                                <td th:text="${#numbers.formatDecimal(listInvoiceOnline.totalPayment, 0, 'COMMA', 0, 'POINT') + ' VND'}"></td>
-                                <td>
-                                    <button type="button" class="btn btn-primary"
-                                            data-toggle="modal" data-target="#detailInvoice"
-                                            th:data-id="${listInvoiceOnline.id}">
-                                        <i class="bi bi-eye-fill"></i>
-                                    </button>
-                                </td>
-                            </tr>
-                            <tr th:if="${listInvoiceOnline.isEmpty()}">
-                                <td colspan="9" style="text-align: center; color: red; font-size: larger;">
-                                    Danh sách trống
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
+<div xmlns:th="http://www.w3.org/1999/xhtml"
+     th:replace="~{/layout/admin/IndexAdmin :: dynamic(~{:: main})}">
+    <main class="DetailInvoiceOnlinePage ConfirmInvoicePage CancelInvoiceForAdminPage">
+        <div>
+            <ul class="breadcrumb">
+                <li class="breadcrumb-item active" aria-current="page">Trang chủ hóa đơn chờ xác nhận</li>
+            </ul>
+        </div>
+        <div class="col-lg-12 grid-margin stretch-card">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Danh sach hóa đơn chờ xác nhận</h4>
+                    <div class="table-responsive">
+                        <div class="header">
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th style="width: 30px;">#</th>
+                                    <th>Mã hóa đơn</th>
+                                    <th>Tên hóa đơn</th>
+                                    <th>Ngày tạo hóa đơn</th>
+                                    <th>Ngày thanh toán hóa đơn</th>
+                                    <th>Tổng giá trị trên hóa đơn</th>
+                                    <th>Tổng tiền thanh toán</th>
+                                    <th>Hành động</th>
+                                </tr>
+                                </thead>
+                            </table>
+                        </div>
+                        <div class="content" style="height: 476px;">
+                            <table class="table table-hover">
+                                <tbody>
+                                <tr th:each="listInvoiceOnline, stat : ${listInvoiceOnline}">
+                                    <td style="width: 30px;" th:text="${stat.count}"></td>
+                                    <td th:text="${listInvoiceOnline.codeInvoice}"></td>
+                                    <td th:text="${listInvoiceOnline.nameInvoice}"></td>
+                                    <td th:text="${#temporals.format(listInvoiceOnline.invoiceCreationDate, 'HH:mm:ss : dd/MM/yyyy')}"></td>
+                                    <td th:text="${#temporals.format(listInvoiceOnline.invoicePaymentDate, 'HH:mm:ss : dd/MM/yyyy')}"></td>
+                                    <td th:text="${#numbers.formatDecimal(listInvoiceOnline.totalInvoiceAmount, 0, 'COMMA', 0, 'POINT') + ' VND'}"></td>
+                                    <td th:text="${#numbers.formatDecimal(listInvoiceOnline.totalPayment, 0, 'COMMA', 0, 'POINT') + ' VND'}"></td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary"
+                                                data-toggle="modal" data-target="#detailInvoice"
+                                                th:data-id="${listInvoiceOnline.id}">
+                                            <i class="bi bi-eye-fill"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr th:if="${listInvoiceOnline.isEmpty()}">
+                                    <td colspan="9" style="text-align: center; color: red; font-size: larger;">
+                                        Danh sách trống
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="modal fade" id="detailInvoice" role="dialog">
-        <div class="modal-dialog modal-fullscreen"
-             style="max-width: 100%; margin: 29px 314px 0 314px; padding: 0 0 0 0;">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Thông tin hóa đơn</h4>
-                    <button type="button" class="btn-close" data-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="container">
-                        <article class="cardInvoice">
-                            <div class="card-body" style="height: 716px;">
-                                <div class="row">
-                                    <div class="col-md-3">
-                                        <h6 id="order-id"></h6>
-                                    </div>
-                                    <div class="col-md-9">
-                                        <h6 id="name-customer"></h6>
-                                    </div>
-                                </div>
-                                <article class="card">
-                                    <div class="card-body row">
-                                        <div class="col">
-                                            <strong>Ngày thanh toán hóa đơn:</strong> <br>
-                                            <span id="invoice-payment-date"></span></div>
-                                        <div style="width: 667px;">
-                                            <strong>Địa chỉ của khách hàng:</strong> <br>
-                                            <span id="customer-address"></span></div>
-                                        <div style="width: 180px;">
-                                            <strong>Tổng tiền thanh toán:</strong> <br>
-                                            <span id="total-payment"></span></div>
-                                    </div>
-                                </article>
-                                <hr>
-                                <div class="contentCheckOut" style="height: 435px;">
-                                    <ul class="row" id="invoice-items" style="width: 100%;"></ul>
-                                </div>
-                            </div>
-                        </article>
+        <div class="modal fade" id="detailInvoice" role="dialog">
+            <div class="modal-dialog modal-fullscreen"
+                 style="max-width: 100%; margin: 29px 314px 0 314px; padding: 0 0 0 0;">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Thông tin hóa đơn</h4>
+                        <button type="button" class="btn-close" data-dismiss="modal"></button>
                     </div>
-                </div>
-                <div class="modal-footer" style="height: 82px;">
-                    <input type="hidden" id="id-invoice">
-                    <button type="button" class="btn btn-outline-success" onclick="confirmInvoice()">
-                        <i class="bi bi-check2-circle"></i>
-                        Tiếp nhận hóa đơn
-                    </button>
-                    <button type="button" class="btn btn-outline-danger" onclick="cancelInvoiceForAdmin()">
-                        Hủy hóa đơn
-                    </button>
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Đóng lại</button>
+                    <div class="modal-body">
+                        <div class="container">
+                            <article class="cardInvoice">
+                                <div class="card-body" style="height: 716px;">
+                                    <div class="row">
+                                        <div class="col-md-3">
+                                            <h6 id="order-id"></h6>
+                                        </div>
+                                        <div class="col-md-9">
+                                            <h6 id="name-customer"></h6>
+                                        </div>
+                                    </div>
+                                    <article class="card">
+                                        <div class="card-body row">
+                                            <div class="col">
+                                                <strong>Ngày thanh toán hóa đơn:</strong> <br>
+                                                <span id="invoice-payment-date"></span></div>
+                                            <div style="width: 667px;">
+                                                <strong>Địa chỉ của khách hàng:</strong> <br>
+                                                <span id="customer-address"></span></div>
+                                            <div style="width: 180px;">
+                                                <strong>Tổng tiền thanh toán:</strong> <br>
+                                                <span id="total-payment"></span></div>
+                                        </div>
+                                    </article>
+                                    <hr>
+                                    <div class="contentCheckOut" style="height: 435px;">
+                                        <ul class="row" id="invoice-items" style="width: 100%;"></ul>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="modal-footer" style="height: 82px;">
+                        <input type="hidden" id="id-invoice">
+                        <button type="button" class="btn btn-outline-success" onclick="confirmInvoice()">
+                            <i class="bi bi-check2-circle"></i>
+                            Tiếp nhận hóa đơn
+                        </button>
+                        <button type="button" class="btn btn-outline-danger" onclick="cancelInvoiceForAdmin()">
+                            Hủy hóa đơn
+                        </button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Đóng lại</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</main>
-</body>
-</html>
+    </main>
+</div>
