--- a/src/main/resources/templates/admin/Sell/IndexSell.html
+++ b/src/main/resources/templates/admin/Sell/IndexSell.html
@@ -1,35 +1,32 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml"
-      th:replace="~{/layout/admin/IndexAdmin :: dynamic(~{:: main})}">
-<body>
-<main class="indexSell">
-    <div>
-        <ul class="breadcrumb">
-            <li class="breadcrumb-item active" aria-current="page">Trang chủ bán hàng</li>
-        </ul>
-    </div>
-    <div class="row">
-        <div class="col-lg-12 grid-margin stretch-card">
-            <div class="card">
-                <div class="card-body">
-                    <h3>Bán Hàng Tại Quầy</h3>
-                    <a type="button" id="createOrderButton" class="btn btn-success"
-                       style="width: 126px;">Tạo hóa đơn *</a>
-                    <span style="font-size: 15px; line-height: 1.5; padding: 5px 10px; color: red">* Bạn chỉ tạo tối đa 5 hóa đơn</span>
-                    <br>
-                    <th:block th:each="listInvoiceByAccount : ${listInvoiceByAccount}">
-                        <a type="button" class="btn btn-outline-secondary"
-                           th:classappend="${id == listInvoiceByAccount.id ? 'active' : ''}"
-                           th:href="@{/mangostore/admin/sell/edit(id=${listInvoiceByAccount.id})}">
-                            <tr>
-                                <td class="align-middle" th:text="${listInvoiceByAccount.nameInvoice}"></td>
-                            </tr>
-                        </a>
-                    </th:block>
+<div xmlns:th="http://www.w3.org/1999/xhtml"
+     th:replace="~{/layout/admin/IndexAdmin :: dynamic(~{:: main})}">
+    <main class="indexSell">
+        <div>
+            <ul class="breadcrumb">
+                <li class="breadcrumb-item active" aria-current="page">Trang chủ bán hàng</li>
+            </ul>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 grid-margin stretch-card">
+                <div class="card">
+                    <div class="card-body">
+                        <h3>Bán Hàng Tại Quầy</h3>
+                        <a type="button" id="createOrderButton" class="btn btn-success"
+                           style="width: 126px;">Tạo hóa đơn *</a>
+                        <span style="font-size: 15px; line-height: 1.5; padding: 5px 10px; color: red">* Bạn chỉ tạo tối đa 5 hóa đơn</span>
+                        <br>
+                        <th:block th:each="listInvoiceByAccount : ${listInvoiceByAccount}">
+                            <a type="button" class="btn btn-outline-secondary"
+                               th:classappend="${id == listInvoiceByAccount.id ? 'active' : ''}"
+                               th:href="@{/mangostore/admin/sell/edit(id=${listInvoiceByAccount.id})}">
+                                <tr>
+                                    <td class="align-middle" th:text="${listInvoiceByAccount.nameInvoice}"></td>
+                                </tr>
+                            </a>
+                        </th:block>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</main>
-</body>
-</html>
+    </main>
+</div>
