--- a/src/main/resources/templates/admin/authentication/IndexAuthentication.html
+++ b/src/main/resources/templates/admin/authentication/IndexAuthentication.html
@@ -1,56 +1,53 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml"
-      th:replace="~{/layout/admin/IndexAdmin :: dynamic(~{:: main})}">
-<body>
-<main>
-    <div>
-        <ul class="breadcrumb">
-            <li class="breadcrumb-item active" aria-current="page">Trang chủ xác thực</li>
-        </ul>
-    </div>
-    <div class="col-lg-12 grid-margin stretch-card">
-        <div class="card">
-            <div class="card-body">
-                <h4 class="card-title">Danh sách tài khoản xác thực quyền</h4>
-                <div class="table-responsive">
-                    <div class="header">
-                        <table class="table table-striped">
-                            <thead>
-                            <tr>
-                                <th style="width: 100px">#</th>
-                                <th style="width: 100px">Thông tin tài khoản</th>
-                                <th style="width: 100px">Quyền tài khoản</th>
-                                <th style="width: 100px">Hành động</th>
-                            </tr>
-                            </thead>
-                        </table>
-                    </div>
-                    <div class="content" style="height: 476px">
-                        <table class="table table-hover">
-                            <tbody>
-                            <tr th:each="listAuthentication, stat : ${listAuthentication}">
-                                <td style="width: 100px" th:text="${stat.count}"></td>
-                                <td style="width: 100px" th:text="${listAuthentication.account.fullName}"></td>
-                                <td style="width: 100px" th:text="${listAuthentication.role.name}"></td>
-                                <td style="width: 100px">
-                                    <a type="button"
-                                       th:href="@{/mangostore/admin/authentication/detail/{id}(id=${listAuthentication.id})}">
-                                        <i class="bi bi-eye"></i>
-                                    </a>
-                                </td>
-                            </tr>
-                            <tr th:if="${listAuthentication.isEmpty()}">
-                                <td colspan="9" style="text-align: center; color: red; font-size: larger;">
-                                    Danh sách tài khoản xác thực quyền trống
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
+<div xmlns:th="http://www.w3.org/1999/xhtml"
+     th:replace="~{/layout/admin/IndexAdmin :: dynamic(~{:: main})}">
+    <main>
+        <div>
+            <ul class="breadcrumb">
+                <li class="breadcrumb-item active" aria-current="page">Trang chủ xác thực</li>
+            </ul>
+        </div>
+        <div class="col-lg-12 grid-margin stretch-card">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Danh sách tài khoản xác thực quyền</h4>
+                    <div class="table-responsive">
+                        <div class="header">
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th style="width: 100px">#</th>
+                                    <th style="width: 100px">Thông tin tài khoản</th>
+                                    <th style="width: 100px">Quyền tài khoản</th>
+                                    <th style="width: 100px">Hành động</th>
+                                </tr>
+                                </thead>
+                            </table>
+                        </div>
+                        <div class="content" style="height: 476px">
+                            <table class="table table-hover">
+                                <tbody>
+                                <tr th:each="listAuthentication, stat : ${listAuthentication}">
+                                    <td style="width: 100px" th:text="${stat.count}"></td>
+                                    <td style="width: 100px" th:text="${listAuthentication.account.fullName}"></td>
+                                    <td style="width: 100px" th:text="${listAuthentication.role.name}"></td>
+                                    <td style="width: 100px">
+                                        <a type="button"
+                                           th:href="@{/mangostore/admin/authentication/detail/{id}(id=${listAuthentication.id})}">
+                                            <i class="bi bi-eye"></i>
+                                        </a>
+                                    </td>
+                                </tr>
+                                <tr th:if="${listAuthentication.isEmpty()}">
+                                    <td colspan="9" style="text-align: center; color: red; font-size: larger;">
+                                        Danh sách tài khoản xác thực quyền trống
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</main>
-</body>
-</html>
+    </main>
+</div>
