--- a/src/main/resources/templates/admin/voucherClient/DetailVoucherClient.html
+++ b/src/main/resources/templates/admin/voucherClient/DetailVoucherClient.html
@@ -1,74 +1,73 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml"
-      th:replace="~{/layout/admin/IndexAdmin :: dynamic(~{:: main})}">
-<body>
-<main class="indexFormatMoneyPage ">
-    <div class="home-tab">
-        <div class="d-sm-flex align-items-center justify-content-between border-bottom"></div>
-        <div class="tab-content tab-content-basic">
-            <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1">
-                <div>
-                    <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a th:href="@{/mangostore/admin/voucher-client}">Trang chủ Voucher
-                            khách hàng</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Voucher khách hàng</li>
-                    </ul>
-                </div>
-                <div class="col-lg-12 grid-margin stretch-card container">
-                    <div class="card">
-                        <div class="card-body container">
-                            <div class="row">
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <label class="form-label">Mã Voucher</label>
-                                        <input type="text" class="form-control" name="codeVoucher"
-                                               th:value="${voucherClient.codeVoucher}" readonly/>
-                                    </div>
-                                </div>
-                                <div class="col-md-7">
-                                    <div class="form-group">
-                                        <label class="form-label">Tên Voucher</label>
-                                        <input type="text" class="form-control" name="nameVoucher"
-                                               th:value="${voucherClient.nameVoucher}" readonly/>
-                                    </div>
-                                </div>
-                                <div class="col-md-2">
-                                    <div class="form-group">
-                                        <label class="form-label">Trạng thái</label>
-                                        <th:block th:if="${voucherClient.voucherStatus == 1}">
-                                            <label class="badge badge-success form-control">Đang diễn ra</label>
-                                        </th:block>
-                                        <th:block th:if="${voucherClient.voucherStatus == 2}">
-                                            <label class="badge badge-info form-control">Sắp ra mắt</label>
-                                        </th:block>
-                                    </div>
-                                </div>
+<div xmlns:th="http://www.w3.org/1999/xhtml"
+     th:replace="~{/layout/admin/IndexAdmin :: dynamic(~{:: main})}">
+    <main class="indexFormatMoneyPage ">
+        <div class="home-tab">
+            <div class="d-sm-flex align-items-center justify-content-between border-bottom"></div>
+            <div class="tab-content tab-content-basic">
+                <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1">
+                    <div>
+                        <ul class="breadcrumb">
+                            <li class="breadcrumb-item"><a th:href="@{/mangostore/admin/voucher-client}">Trang chủ
+                                phiếu giảm giá khách hàng</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Phiếu giảm giá khách hàng</li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-12 grid-margin stretch-card container">
+                        <div class="card">
+                            <div class="card-body container">
                                 <div class="row">
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <label class="form-label">Mã phiếu giảm giá</label>
+                                            <input type="text" class="form-control" name="codeVoucher"
+                                                   th:value="${voucherClient.codeVoucher}" readonly/>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-7">
+                                        <div class="form-group">
+                                            <label class="form-label">Tên phiếu giảm giá</label>
+                                            <input type="text" class="form-control" name="nameVoucher"
+                                                   th:value="${voucherClient.nameVoucher}" readonly/>
+                                        </div>
+                                    </div>
                                     <div class="col-md-2">
                                         <div class="form-group">
-                                            <label class="form-label">Giá trị giảm</label>
-                                            <div class="d-flex">
-                                                <div class="form-control"
-                                                     th:text="${#numbers.formatDecimal(voucherClient.reducedValue , 0, 'COMMA', 0, 'POINT')}"
-                                                     readonly></div>
-                                                <span style="margin-left: 0.5rem">VND</span>
+                                            <label class="form-label">Trạng thái</label>
+                                            <th:block th:if="${voucherClient.voucherStatus == 1}">
+                                                <label class="badge badge-success form-control">Đang diễn ra</label>
+                                            </th:block>
+                                            <th:block th:if="${voucherClient.voucherStatus == 2}">
+                                                <label class="badge badge-info form-control">Sắp ra mắt</label>
+                                            </th:block>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-2">
+                                            <div class="form-group">
+                                                <label class="form-label">Giá trị giảm</label>
+                                                <div class="input-group">
+                                                    <div class="form-control"
+                                                         th:text="${#numbers.formatDecimal(voucherClient.reducedValue , 0, 'COMMA', 0, 'POINT')}"
+                                                         readonly></div>
+                                                    <span class="input-group-text">VND</span>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="form-group">
-                                            <label class="form-label">Ngày bắt đầu</label>
-                                            <input type="text" class="form-control" name="startDay"
-                                                   th:value="${#temporals.format(voucherClient.startDay, 'yyyy-MM-dd')}"
-                                                   readonly/>
+                                        <div class="col-md-3">
+                                            <div class="form-group">
+                                                <label class="form-label">Ngày bắt đầu</label>
+                                                <input type="text" class="form-control" name="startDay"
+                                                       th:value="${#temporals.format(voucherClient.startDay, 'yyyy-MM-dd')}"
+                                                       readonly/>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="form-group">
-                                            <label class="form-label">Ngày kết thúc</label>
-                                            <input type="text" class="form-control" name="endDate"
-                                                   th:value="${#temporals.format(voucherClient.endDate, 'yyyy-MM-dd')}"
-                                                   readonly/>
+                                        <div class="col-md-3">
+                                            <div class="form-group">
+                                                <label class="form-label">Ngày kết thúc</label>
+                                                <input type="text" class="form-control" name="endDate"
+                                                       th:value="${#temporals.format(voucherClient.endDate, 'yyyy-MM-dd')}"
+                                                       readonly/>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -78,7 +77,5 @@
                 </div>
             </div>
         </div>
-    </div>
-</main>
-</body>
-</html>
+    </main>
+</div>
