--- a/src/main/resources/templates/client/Profile/DetailProfile/ChangePassword.html
+++ b/src/main/resources/templates/client/Profile/DetailProfile/ChangePassword.html
@@ -1,77 +1,76 @@
-<!doctype html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml"
-      th:replace="~{/layout/client/IndexClient :: dynamic(~{:: main})}">
-<body>
-<main class="showPassWordPage checkPasswordClientPage updateChangePasswordPage">
-    <div class="container">
-        <div style="height: 660px;">
-            <div class="row">
-                <div class="col-md-3" th:replace="~{/client/Profile/IndexProfile :: detailView}"></div>
-                <div class="col-md-9">
-                    <h4>Đổi mật khẩu</h4>
-                    <p>Để bảo mật tài khoản, vui lòng không chia sẻ mật khẩu của mình với người khác</p>
-                    <hr>
-                    <form id="formChangePassword" th:action="@{/mangostore/change-password/update}" method="post"
-                          th:object="${profile}">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <div style="display: flex; align-items: center;">
-                                        <label class="control-label col-sm-3" style="margin-bottom: 0;">mật khẩu
-                                            mới:</label>
-                                        <div class="col-sm-7">
-                                            <div class="row">
-                                                <div class="col-sm-9">
-                                                    <label style="margin-top: 16px;">
-                                                        <input type="hidden" name="id" th:field="*{id}"/>
-                                                        <input type="password" id="passwordInput" class="form-control"
-                                                               th:field="*{encryptionPassword}"
-                                                               style="width: 350px;"/>
-                                                    </label>
-                                                </div>
-                                                <div class="col-sm-3">
-                                                    <button type="button" class="btn btn-primary"
-                                                            style="width: 139px; margin-top: 16px; font-size: 13px;">
-                                                        Hiện pass
-                                                    </button>
+<div xmlns:th="http://www.w3.org/1999/xhtml"
+     th:replace="~{/layout/client/IndexClient :: dynamic(~{:: main})}">
+    <main class="showPassWordPage checkPasswordClientPage updateChangePasswordPage">
+        <div class="container">
+            <div style="height: 660px;">
+                <div class="row">
+                    <div class="col-md-3" th:replace="~{/client/Profile/IndexProfile :: detailView}"></div>
+                    <div class="col-md-9">
+                        <h4>Đổi mật khẩu</h4>
+                        <p>Để bảo mật tài khoản, vui lòng không chia sẻ mật khẩu của mình với người khác</p>
+                        <hr>
+                        <form id="formChangePassword" th:action="@{/mangostore/change-password/update}" method="post"
+                              th:object="${profile}">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <div style="display: flex; align-items: center;">
+                                            <label class="control-label col-sm-3" style="margin-bottom: 0;">mật khẩu
+                                                mới:</label>
+                                            <div class="col-sm-7">
+                                                <div class="row">
+                                                    <div class="col-sm-9">
+                                                        <label style="margin-top: 16px;">
+                                                            <input type="hidden" name="id" th:field="*{id}"/>
+                                                            <input type="password" id="passwordInput"
+                                                                   class="form-control"
+                                                                   th:field="*{encryptionPassword}"
+                                                                   style="width: 350px;"/>
+                                                        </label>
+                                                    </div>
+                                                    <div class="col-sm-3">
+                                                        <button type="button" class="btn btn-primary"
+                                                                style="width: 50px; margin-top: 16px; font-size: 13px;">
+                                                            <i class="bi bi-eye"></i>
+                                                        </button>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div style="margin-left: 219px;">
-                                        <span id="passwordError" style="font-size: 13px; display: none; color: red">Mật khẩu phải dài 8-16 ký tự, chứa ít nhất một ký tự viết hoa và một ký tự viết thường và chỉ bao gồm các chữ cái, số hoặc dấu câu thông thường</span>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div style="display: flex; align-items: center;">
-                                        <label class="control-label col-sm-3">Xác nhận mật khẩu:</label>
-                                        <div class="col-sm-7">
-                                            <label>
-                                                <input type="password" class="form-control" id="confirmPasswordInput"
-                                                       style="width: 350px;"/>
-                                            </label>
+                                        <div style="margin-left: 219px;">
+                                            <span id="passwordError" style="font-size: 13px; display: none; color: red">Mật khẩu phải dài 8-16 ký tự, chứa ít nhất một ký tự viết hoa và một ký tự viết thường và chỉ bao gồm các chữ cái, số hoặc dấu câu thông thường</span>
                                         </div>
                                     </div>
-                                    <div style="margin-left: 223px">
+                                    <div class="form-group">
+                                        <div style="display: flex; align-items: center;">
+                                            <label class="control-label col-sm-3">Xác nhận mật khẩu:</label>
+                                            <div class="col-sm-7">
+                                                <label>
+                                                    <input type="password" class="form-control"
+                                                           id="confirmPasswordInput"
+                                                           style="width: 350px;"/>
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div style="margin-left: 223px">
                                         <span id="confirmPasswordError"
                                               style="font-size: 13px; display: none; color: red">Mật khẩu và Xác nhận mật khẩu không giống nhau</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <button type="button" class="btn btn-outline-success" id="saveButton"
+                                                onclick="UpdateChangePassword()" style="margin-left: 52px;">
+                                            Lưu lại
+                                        </button>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <button type="button" class="btn btn-outline-success" id="saveButton"
-                                            onclick="UpdateChangePassword()" style="margin-left: 52px;">
-                                        Lưu lại
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</main>
-</body>
-</html>
+    </main>
+</div>
