--- a/src/main/resources/templates/layout/client/MenuClient.html
+++ b/src/main/resources/templates/layout/client/MenuClient.html
@@ -15,7 +15,8 @@
                         <li><a th:href="@{/mangostore/admin/home}" style="text-decoration: none; color: #555;">Quản lý
                             sản phẩm</a></li>
                     </th:block>
-                    <li><a th:href="@{/mangostore/voucher/shop}" style="text-decoration: none; color: #555;">Voucher tại
+                    <li><a th:href="@{/mangostore/voucher/shop}" style="text-decoration: none; color: #555;">Phiếu giảm
+                        giá tại
                         cửa hàng</a>
                     </li>
                     <th:block th:unless="${profile != null}">
@@ -39,7 +40,8 @@
                         </li>
                         <li>
                             <a type="button" th:href="@{/mangostore/login/clear}"
-                               style="display: inline-block; background: #d72d2d; color: #fff; padding: 8px 30px; margin: 30px 0; border-radius: 30px; transition: background 0.5s; text-decoration: none;">Đăng xuất</a>
+                               style="display: inline-block; background: #d72d2d; color: #fff; padding: 8px 30px; margin: 30px 0; border-radius: 30px; transition: background 0.5s; text-decoration: none;">Đăng
+                                xuất</a>
                         </li>
                     </th:block>
                 </ul>
