--- a/src/main/resources/templates/login/ForgotPassword.html
+++ b/src/main/resources/templates/login/ForgotPassword.html
@@ -1,34 +1,32 @@
-<!doctype html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml"
-      th:replace="~{/layout/login/IndexLogin :: dynamic(~{:: main})}">
-<body>
-<main class="SendEmailPage ForgotPasswordPage">
-    <div class="row align-items-center">
-        <div class="header-text mb-4">
-            <h2>Quên mật khẩu</h2>
-            <p>Vui lòng nhập email để khôi phục tài khoản.</p>
+<div xmlns:th="http://www.w3.org/1999/xhtml"
+     th:replace="~{/layout/login/IndexLogin :: dynamic(~{:: main})}">
+    <main class="SendEmailPage ForgotPasswordPage">
+        <div class="row align-items-center">
+            <div class="header-text mb-4">
+                <h2>Quên mật khẩu</h2>
+                <p>Vui lòng nhập email để khôi phục tài khoản.</p>
+            </div>
+            <form id="fromSendEmail" th:action="@{/mangostore/login/code}" method="post">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control form-control-lg bg-light fs-6" name="forgotEmail"
+                           id="emailInput" placeholder="Vui lòng nhập email" th:value="${session.loginEmailForgot}">
+                    <button type="button" onclick="sendEmail()" class="btn btn-primary">Gủi mã</button>
+                </div>
+            </form>
+            <form id="formForgotPassword" th:action="@{/mangostore/login/forgot/password}" method="post">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control form-control-lg bg-light fs-6" name="codeForgot"
+                           id="codeForgotInput" placeholder="Vui lòng nhập mã">
+                </div>
+                <div class="input-group mb-3">
+                    <button type="button" onclick="forgotPassword()" class="btn btn-lg btn-primary w-100 fs-6">Tiếp
+                    </button>
+                </div>
+            </form>
+            <div class="row">
+                <small>Bạn đã nhớ mật khẩu của mình? <a th:href="@{/mangostore/login/from}"
+                                                        style="text-decoration: none">Đăng nhập</a></small>
+            </div>
         </div>
-        <form id="fromSendEmail" th:action="@{/mangostore/login/code}" method="post">
-            <div class="input-group mb-3">
-                <input type="text" class="form-control form-control-lg bg-light fs-6" name="forgotEmail"
-                       id="emailInput" placeholder="Vui lòng nhập email" th:value="${session.loginEmailForgot}">
-                <button type="button" onclick="sendEmail()" class="btn btn-primary">Gủi mã</button>
-            </div>
-        </form>
-        <form id="formForgotPassword" th:action="@{/mangostore/login/forgot/password}" method="post">
-            <div class="input-group mb-3">
-                <input type="text" class="form-control form-control-lg bg-light fs-6" name="codeForgot"
-                       id="codeForgotInput" placeholder="Vui lòng nhập mã">
-            </div>
-            <div class="input-group mb-3">
-                <button type="button" onclick="forgotPassword()" class="btn btn-lg btn-primary w-100 fs-6">Tiếp</button>
-            </div>
-        </form>
-        <div class="row">
-            <small>Bạn đã nhớ mật khẩu của mình? <a th:href="@{/mangostore/login/from}"
-                                                    style="text-decoration: none">Đăng nhập</a></small>
-        </div>
-    </div>
-</main>
-</body>
-</html>
+    </main>
+</div>
