--- a/src/main/resources/templates/login/Form.html
+++ b/src/main/resources/templates/login/Form.html
@@ -1,49 +1,49 @@
-<!doctype html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml"
-      th:replace="~{/layout/login/IndexLogin :: dynamic(~{:: main})}">
-<body>
-<main class="loginPage">
-    <div class="row align-items-center">
-        <div class="header-text mb-4">
-            <h3>Xin chào, Bạn</h3>
-            <p>Vui lòng đăng nhập để sử dụng trang web.</p>
-        </div>
-        <form id="fromLogin" th:action="@{/mangostore/login/success}" method="post">
-            <div class="input-group mb-3">
-                <input type="text" class="form-control form-control-lg bg-light fs-6" name="email" id="emailInput"
-                       placeholder="Nhập Email">
+<div xmlns:th="http://www.w3.org/1999/xhtml"
+     th:replace="~{/layout/login/IndexLogin :: dynamic(~{:: main})}">
+    <main class="loginPage">
+        <div class="row align-items-center">
+            <div class="header-text mb-4">
+                <h3>Xin chào, Bạn</h3>
+                <p>Vui lòng đăng nhập để sử dụng trang web.</p>
             </div>
-            <div class="input-group mb-1">
-                <input type="password" class="form-control form-control-lg bg-light fs-6" name="password"
-                       id="passwordInput"
-                       placeholder="Mật khẩu">
-            </div>
-            <div class="input-group mb-5 d-flex justify-content-between">
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="formCheck" name="remember">
-                    <label for="formCheck" class="form-check-label text-secondary"><small>Nhớ giúp tôi</small></label>
+            <form id="fromLogin" th:action="@{/mangostore/login/success}" method="post">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control form-control-lg bg-light fs-6" name="email" id="emailInput"
+                           placeholder="Nhập Email">
                 </div>
-                <div class="forgot">
-                    <small><a th:href="@{/mangostore/login/forgot}" style="text-decoration: none">Quên mật
-                        khẩu?</a></small>
+                <div class="input-group mb-1">
+                    <input type="password" class="form-control form-control-lg bg-light fs-6" name="password"
+                           id="passwordInput"
+                           placeholder="Mật khẩu">
                 </div>
+                <div class="input-group mb-5 d-flex justify-content-between">
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="formCheck" name="remember">
+                        <label for="formCheck" class="form-check-label text-secondary"><small>Nhớ giúp
+                            tôi</small></label>
+                    </div>
+                    <div class="forgot">
+                        <small><a th:href="@{/mangostore/login/forgot}" style="text-decoration: none">Quên mật
+                            khẩu?</a></small>
+                    </div>
+                </div>
+                <div class="input-group mb-3">
+                    <button type="button" onclick="loginAccount()" class="btn btn-lg btn-primary w-100 fs-6">Đăng nhập
+                    </button>
+                </div>
+                <div class="input-group mb-3">
+                    <a type="button" th:href="@{/oauth2/authorization/google}"
+                       class="btn btn-lg btn-light w-100 fs-6"><img
+                            th:src="@{|/images/layout/icon-google.png|}"
+                            style="width:20px"
+                            class="me-2" alt=""><small>Đăng nhập bằng Google</small>
+                    </a>
+                </div>
+            </form>
+            <div class="row">
+                <small>Bạn không có tài khoản ? <a th:href="@{/mangostore/login/signup}" style="text-decoration: none">Đăng
+                    ký</a></small>
             </div>
-            <div class="input-group mb-3">
-                <button type="button" onclick="loginAccount()" class="btn btn-lg btn-primary w-100 fs-6">Đăng nhập</button>
-            </div>
-            <div class="input-group mb-3">
-                <a type="button" th:href="@{/oauth2/authorization/google}" class="btn btn-lg btn-light w-100 fs-6"><img
-                        th:src="@{|/images/layout/icon-google.png|}"
-                        style="width:20px"
-                        class="me-2" alt=""><small>Đăng nhập bằng Google</small>
-                </a>
-            </div>
-        </form>
-        <div class="row">
-            <small>Bạn không có tài khoản ? <a th:href="@{/mangostore/login/signup}" style="text-decoration: none">Đăng
-                ký</a></small>
         </div>
-    </div>
-</main>
-</body>
-</html>
+    </main>
+</div>
