--- a/src/main/resources/templates/login/NewPassword.html
+++ b/src/main/resources/templates/login/NewPassword.html
@@ -1,31 +1,29 @@
-<!doctype html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml"
-      th:replace="~{/layout/login/IndexLogin :: dynamic(~{:: main})}">
-<body>
-<main class="SetPasswordPage">
-    <div class="row align-items-center">
-        <div class="header-text mb-4">
-            <h2>Đặt mật khẩu</h2>
-            <p>Vui lòng đặt mật khẩu để sử dụng website.</p>
+<div xmlns:th="http://www.w3.org/1999/xhtml"
+     th:replace="~{/layout/login/IndexLogin :: dynamic(~{:: main})}">
+    <main class="SetPasswordPage">
+        <div class="row align-items-center">
+            <div class="header-text mb-4">
+                <h2>Đặt mật khẩu</h2>
+                <p>Vui lòng đặt mật khẩu để sử dụng website.</p>
+            </div>
+            <form id="formSetPassword" th:action="@{/mangostore/login/refresh/success}" method="post">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control form-control-lg bg-light fs-6" name="email"
+                           placeholder="Nhập Email" th:value="${session.loginEmailForgot}" readonly disabled>
+                </div>
+                <div class="input-group mb-3">
+                    <input type="password" class="form-control form-control-lg bg-light fs-6" name="passwordRefresh"
+                           id="passwordInput" placeholder="Nhập mật khẩu">
+                </div>
+                <div class="input-group mb-3">
+                    <input type="password" class="form-control form-control-lg bg-light fs-6" name="passwordRefreshRE"
+                           id="passwordConfirm" placeholder="Nhập lại mật khẩu">
+                </div>
+                <div class="input-group mb-3">
+                    <button type="button" onclick="setPassword()" class="btn btn-lg btn-primary w-100 fs-6">Hoàn thành
+                    </button>
+                </div>
+            </form>
         </div>
-        <form id="formSetPassword" th:action="@{/mangostore/login/refresh/success}" method="post">
-            <div class="input-group mb-3">
-                <input type="text" class="form-control form-control-lg bg-light fs-6" name="email"
-                       placeholder="Nhập Email" th:value="${session.loginEmailForgot}" readonly disabled>
-            </div>
-            <div class="input-group mb-3">
-                <input type="password" class="form-control form-control-lg bg-light fs-6" name="passwordRefresh"
-                       id="passwordInput" placeholder="Nhập mật khẩu">
-            </div>
-            <div class="input-group mb-3">
-                <input type="password" class="form-control form-control-lg bg-light fs-6" name="passwordRefreshRE"
-                       id="passwordConfirm" placeholder="Nhập lại mật khẩu">
-            </div>
-            <div class="input-group mb-3">
-                <button type="button" onclick="setPassword()" class="btn btn-lg btn-primary w-100 fs-6">Hoàn thành</button>
-            </div>
-        </form>
-    </div>
-</main>
-</body>
-</html>
+    </main>
+</div>
